--- a/jdk-1.6-parent/mbeanview-parent/pom.xml
+++ b/jdk-1.6-parent/mbeanview-parent/pom.xml
@@ -14,6 +14,13 @@
 
 	<name>MBeanView - Parent</name>
 	<description>Jmx panel, to view and operate the applications mbeans</description>
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<developers>
 		<developer>
